--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AppLab</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onscroll="scrollWin()">
 
 	<header class="header">
 		<div class="container">
@@ -26,19 +27,16 @@
 			</div>
 		</div>
 	</header>
-	<div class="main">
+	<section class="main">
 		<div class="container">
 			<div class="main__wrapper">
 				<div class="main__content">
-					<span><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48"
-							style=" fill:#ffffff;">
-							<path
-								d="M 24 4 C 12.972066 4 4 12.972074 4 24 C 4 35.027926 12.972066 44 24 44 C 35.027934 44 44 35.027926 44 24 C 44 12.972074 35.027934 4 24 4 z M 24 7 C 33.406615 7 41 14.593391 41 24 C 41 33.406609 33.406615 41 24 41 C 14.593385 41 7 33.406609 7 24 C 7 14.593391 14.593385 7 24 7 z M 31.470703 17.986328 A 1.50015 1.50015 0 0 0 30.439453 18.439453 L 21.5 27.378906 L 17.560547 23.439453 A 1.50015 1.50015 0 1 0 15.439453 25.560547 L 20.439453 30.560547 A 1.50015 1.50015 0 0 0 22.560547 30.560547 L 32.560547 20.560547 A 1.50015 1.50015 0 0 0 31.470703 17.986328 z">
-							</path>
-						</svg>
-						#1 Editiors Choice App of 2020</span>
-					<h1>Best app for your modern lifestyle</h1>
-					<p>Increase productivity with a simple to-do app. app for
+					<div class="main__item">
+						<i class="bi bi-patch-check"></i>
+						<span>#1 Editiors Choice App of 2020</span>
+					</div>
+					<h1 class="title">Best app for your modern lifestyle</h1>
+					<p class="text">Increase productivity with a simple to-do app. app for
 						managing your personal budgets.</p>
 					<div class="main__links">
 						<a href="" class="btn">Try for free</a>
@@ -48,7 +46,154 @@
 				<img src="./images/mobile.png" alt="" class="main__image">
 			</div>
 		</div>
-	</div>
+	</section>
+	<section class="partners">
+		<div class="container">
+			<div class="partners__wrapper">
+				<p class="text">Trusted by companies like</p>
+				<div class="partners__inner">
+					<img src="./images/southwest.png" alt="" class="partners__item">
+					<img src="./images/anubis.png" alt="" class="partners__item">
+					<img src="./images/alonzo.png" alt="" class="partners__item">
+					<img src="./images/express.png" alt="" class="partners__item">
+					<img src="./images/maniac.png" alt="" class="partners__item">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="features">
+		<div class="container">
+			<div class="features__wrapper">
+				<div class="parallax">
+					<div class="parallax__phone"></div>
+					<div class="parallax__phone2"></div>
+				</div>
+				<div class="features__content">
+					<h2 class="subtitle">Awesome apps<br>features</h2>
+					<p class="text">Increase productivity with a simple to-do app. app for managing your personal budgets.</p>
+					<ul class="features__list">
+						<li class="features__item">
+							<i class="bi bi-speedometer"></i>
+							<p class="text"><span>Fast Performance</span><br>
+								Get your blood tests delivered at
+								home collect a sample from the
+								news your blood tests.</p>
+						</li>
+						<li class="features__item">
+							<i class="bi bi-layout-wtf"></i>
+							<p class="text"><span>Prototyping</span><br>
+								Get your blood tests delivered at
+								home collect a sample from the
+								news your blood tests.</p>
+						</li>
+						<li class="features__item">
+							<i class="bi bi-bezier"></i>
+							<p class="text"><span>Vector Editing</span><br>
+								Get your blood tests delivered at
+								home collect a sample from the
+								news your blood tests.</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="jackpots">
+		<div class="container">
+			<div class="jackpots__row">
+				<h2 class="subtitle">Smart jackpots that you may love this anytime & anywhere</h2>
+				<hr>
+				<p class="text">The rise of mobile devices transforms the way we
+					consume information entirely and the world's most
+					elevant channels such as Facebook.</p>
+			</div>
+			<ul class="jackpots__list">
+				<li class="jackpots__item">
+					<i class="bi bi-credit-card-2-front"></i>
+					<p class="text"><span>Automatic Payouts</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="jackpots__item">
+					<i class="bi bi-globe2"></i>
+					<p class="text"><span>Network Effect</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="jackpots__item">
+					<i class="bi bi-bookmark-star"></i>
+					<p class="text"><span>Bigger Rewards Method</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+			</ul>
+		</div>
+	</section>
+	<section class="integration">
+		<div class="container">
+			<div class="integration__wrapper">
+				<img src="./images/integration.png" alt="">
+				<div class="integration__content">
+					<h2 class="subtitle">Designed & built by
+						the latest code
+						integration</h2>
+					<p class="text">The rise of mobile devices transforms the way we
+						consume information entirely and the world's most
+						elevant channels such as Facebook.</p>
+					<a href="" class="btn">Learn more</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<section class="advantages">
+		<div class="container">
+			<h2 class="subtitle">Why you should choose
+				our app</h2>
+			<p class="text">The rise of mobile devices transforms the way we consume information entirely
+				and the world's most elevant channels such as Facebook.</p>
+			<ul class="advantages__list">
+				<li class="advantages__item">
+					<i class="bi bi-dice-1"></i>
+					<p class="text"><span>App Development</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="advantages__item">
+					<i class="bi bi-dice-2"></i>
+					<p class="text"><span>10 Times Award</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="advantages__item">
+					<i class="bi bi-dice-3"></i>
+					<p class="text"><span>Cloud Storage</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="advantages__item">
+					<i class="bi bi-dice-4"></i>
+					<p class="text"><span>Customization</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="advantages__item">
+					<i class="bi bi-dice-5"></i>
+					<p class="text"><span>UX Planning</span><br>Get your blood tests delivered at
+						home collect a sample from the
+						news your blood tests.</p>
+				</li>
+				<li class="advantages__item">
+					<i class="bi bi-dice-6"></i>
+					<p class="text"><span>Customer Support</span><br>Get your blood tests delivered at home collect a sample from
+						the news your blood tests.</p>
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<script src="./script.js"></script>
 </body>
 
 </html>
